Implement getRecordsByOrder & fetchByType
