# storage/api-docs/api-docs.json
@@ -1438,6 +1438,182 @@
                 }
             }
         },
+        "/api/distributions/search-by-order": {
+            "get": {
+                "tags": [
+                    "Distributions"
+                ],
+                "summary": "Get distributions records by order_numbe fileds",
+                "description": "Get distributions records by query.",
+                "operationId": "d0455a57d5fdd11341383ff6c79f974f",
+                "parameters": [
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "description": "Page number",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "order_number"
+                                ],
+                                "properties": {
+                                    "order_number": {
+                                        "type": "string",
+                                        "example": "425134"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "comment": {
+                                            "type": "string",
+                                            "example": "Velit veritatis quia vel nemo qui. Eaque commodi expedita enim libero ut. Porro ducimus repellendus tenetur."
+                                        },
+                                        "status": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "quantity": {
+                                            "type": "integer",
+                                            "example": 44
+                                        },
+                                        "inventory_id": {
+                                            "type": "integer",
+                                            "example": 24
+                                        },
+                                        "created_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-04-07T11:42:45.000000Z"
+                                        },
+                                        "updated_at": {
+                                            "type": "string",
+                                            "format": "date-time",
+                                            "example": "2024-04-07T11:42:45.000000Z"
+                                        },
+                                        "inventory": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 24
+                                                },
+                                                "quantity": {
+                                                    "type": "integer",
+                                                    "example": 10
+                                                },
+                                                "sku": {
+                                                    "type": "string",
+                                                    "example": "1359395842801"
+                                                },
+                                                "item_type": {
+                                                    "type": "string",
+                                                    "example": "magni"
+                                                },
+                                                "detailed_description": {
+                                                    "type": "string",
+                                                    "example": "Velit ut ipsam neque tempora est dicta. Et distinctio eligendi expedita corporis assumenda aspernatur hic."
+                                                }
+                                            },
+                                            "type": "object"
+                                        },
+                                        "created_for_user": {
+                                            "properties": {
+                                                "id": {
+                                                    "type": "integer",
+                                                    "example": 1
+                                                },
+                                                "name": {
+                                                    "type": "string",
+                                                    "example": "Percival Schulist"
+                                                },
+                                                "emp_type_id": {
+                                                    "type": "integer",
+                                                    "example": 2
+                                                },
+                                                "phone": {
+                                                    "type": "string",
+                                                    "example": "0556926412"
+                                                },
+                                                "employee_type": {
+                                                    "properties": {
+                                                        "id": {
+                                                            "type": "integer",
+                                                            "example": 2
+                                                        },
+                                                        "name": {
+                                                            "type": "string",
+                                                            "example": "miluim"
+                                                        }
+                                                    },
+                                                    "type": "object"
+                                                }
+                                            },
+                                            "type": "object"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Invalid search value"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Server error occurred"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/distributions/search-by-filter": {
             "get": {
                 "tags": [
@@ -2853,6 +3029,82 @@
                                     "query": {
                                         "type": "string",
                                         "example": "Pending"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "quantity": {
+                                                "type": "integer",
+                                                "example": 33
+                                            },
+                                            "sku": {
+                                                "type": "string",
+                                                "example": "0028221469208"
+                                            },
+                                            "item_type": {
+                                                "type": "string",
+                                                "example": "autem"
+                                            },
+                                            "detailed_description": {
+                                                "type": "string",
+                                                "example": "Neque recusandae corporis totam facere pariatur. Et perspiciatis aut in quia. Placeat quas vero modi magni ut. Voluptas et qui vitae culpa."
+                                            },
+                                            "reserved": {
+                                                "type": "integer",
+                                                "example": 3
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
+        "/api/inventory/fetch-by-type": {
+            "get": {
+                "tags": [
+                    "Inventories"
+                ],
+                "summary": "Search inventory records by type_id",
+                "description": "Search inventory records by providing  type_id. Returns matching inventory records.",
+                "operationId": "8288656112b1dc7c06aa4f17260f6c93",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "type_id"
+                                ],
+                                "properties": {
+                                    "type_id": {
+                                        "type": "integer",
+                                        "example": 1
                                     }
                                 },
                                 "type": "object"
